# DataFactory

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Learning_log.md  README.md  ROOT_LAYOUT.md  Roadmap.md  auto_pipeline.py  constraints.txt  core_engine.py  db_manager.py  docker-compose.yml  factory_admin.db  factory_config.yaml  factory_guard.py  log_setup.py  main.py  main_factory.py  pyproject.toml  requirements-dev.txt  requirements.txt  tools.py
config/: config_loader.py  logging.py  settings.default.yaml  settings.yaml  startup.py
core/: __init__.py  archiver.py  guard.py  ingest.py  pending_queue.py  pipeline.py  qc_engine.py  reviewer.py  seed_test.py  time_utils.py
dashboard/: app.py  hq.py  hq_layout.py  inference_module.py  layout.py  sensor_module.py  sentinel.py
db/: db_connection.py  db_tools.py
docs/: 1_QC_and_pseudo_label.md  AUDIT_REPORT.md  DataFactory_OnePager.docx  HANDOVER.md  Roadmap.md  active_labeling_priority.md  architecture.md  architecture_mapping.md  architecture_mindmap.md  batch_output_confidence_tiers.md  cvat_setup.md  dashboard_design.md  demo_pitch.md  demo_script.md  draft_followup_email.md  image_mode.md  implementation_checklist.md  industrial_standards.md  logic_diagram.md  one_pager_for_faculty.md  optimization_log.md  path_decoupling.md  settings_guide.md  smart_slicing.md  testing_and_audit.md  v2_kickoff.md  v3_dev_plan.md  v3_task_list.md
engines/: __init__.py  annotation_upload.py  db_connection.py  db_tools.py  file_tools.py  fingerprinter.py  frame_io.py  labeled_return.py  labeling_export.py  metrics.py  modality_handlers.py  model_registry.py  motion_filter.py  notifier.py  production_tools.py  quality_tools.py  report_tools.py  retry_utils.py  site_info.py  vision_detector.py
experiments/: count_vehicles_track.py
labeling/: annotation_upload.py  labeled_return.py  labeling_export.py
legacy/: README.md  db_manager.py  factory_config.yaml  factory_guard.py  main_factory.py
legacy_code/: extract_frames.py
models/: README.md
scripts/: compare_models.py  cvat_api.py  cvat_pull_annotations.py  cvat_setup_labels.py  cvat_upload_annotations.py  datafactory.service  demo_prepare.sh  download_models.py  export_for_cvat.py  export_for_cvat_native.py  export_for_labeling.py  import_labeled_return.py  migrate_sqlite_to_pg.py  query_lineage.py  register_model.py  reset_config.py  reset_factory.py  run_demo_a.sh  sanity_check.py  smoke_test.py  start_local.sh  start_mlflow_server.sh  test_email.py  train_model.py
templates/: email_report.html
tests/: README.md  conftest.py  smoke_test.py  test_dual_gate_mlflow.py
utils/: file_tools.py  fingerprinter.py  logging.py  metrics.py  notifier.py  report_tools.py  retry_utils.py  site_info.py  startup.py  system_probe.py  time_utils.py  usage_tracker.py
vision/: foundation_models.py  (+7 more)
(+41 files in other folders)
