# P3 代码格式化与类型检查（black + isort + mypy）
[project]
name = "datafactory"
version = "3.9"
description = "工业视频质检流水线"
requires-python = ">=3.9"

dependencies = [
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "opencv-python>=4.8.0",
    "numpy>=1.26,<2",
    "ultralytics>=8.0.0,<9.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "inputimeout>=1.0.0",
    "watchdog>=3.0.0",
    "mlflow>=2.0.0",
    "psycopg2-binary>=2.9",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "dash>=2.14.0",
    "plotly>=5.18.0",
    "Pillow>=9.0.0",
    "psutil>=5.9.0",
    "certifi>=2023.0.0",
    "pytz>=2024.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "httpx>=0.24",
]
foundation = [
    "open-clip-torch>=2.20.0",
    "segment-anything>=1.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | legacy
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "legacy", "__pycache__"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端（需测试视频）",
    "full_pipeline: 全链路一条龙，等价 tools.py --test",
    "slow: 耗时较长，日常 CI 用 -m 'not slow' 跳过",
]
